# apsit-notifier

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  env.example  main.py  pyproject.toml  readme.md  requirements.txt
utils/: config.py  notification_bot.py  storage.py
utils/senders/: telegram_sender.py  whatsapp_sender.py
